tests/NormalTests/paczka1/fuzzy1/86717588.err
Error in line 1: Gsp S268 9ß,4
Error in line 2: Gsp S268 365,6
Error in line 9: Lrc A323 33,5
Error in line 19: 2fyUpecHu A323 k00,2
Error in line 20: zpCkwgxNT A323 34,4
Error in line 21: zpCkwgxNT A61 94,4
Error in line 22: Gsp S268 90,2
Error in line 29: G12GhEAU A323 98,6
Error in line 32: G12GhEAU S268 1,2
Error in line 26: Gsp A323 7,9
Error in line 7: 2fyUpecHu A323 24,8
